5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1664_1390.log
== TEST (2019-04-16 11:04:00) 
-- CODE:
x = int(input("digite os minutos do cliente: "))
if (x<=100):
	x1 = x* 1.2
	
else:
	x1 = x*1.4 + 25
print(x1)
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:04:27) 
-- CODE:
x = int(input("digite os minutos do cliente: "))
if (x<=100):
	x1 = x* 1.2
	
else:
	x1 = x*1.4 + 25
print(round(x1,2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:04:37) 
-- CODE:
x = int(input("digite os minutos do cliente: "))
if (x<=100):
	x1 = x* 1.2
	
else:
	x1 = x*1.4 + 25
print(round(x1,2))
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:04:43) 
-- CODE:
x = int(input("digite os minutos do cliente: "))
if (x<=100):
	x1 = x* 1.2
	
else:
	x1 = x*1.4 + 25
print(round(x1,2))
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:04:47) 
-- CODE:
x = int(input("digite os minutos do cliente: "))
if (x<=100):
	x1 = x* 1.2
	
else:
	x1 = x*1.4 + 25
print(round(x1,2))
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:04:52) 
-- CODE:
x = int(input("digite os minutos do cliente: "))
if (x<=100):
	x1 = x* 1.2
	
else:
	x1 = x*1.4 + 25
print(round(x1,2))
-- EXECUTION TIME:
0.166476
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
193.0
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
303.6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
